made letters currently in search value green in search results, adding correct font and spacing for search results, made each result a link, added onfocus and onblur event listeners

--- a/react-app/src/components/Search/Search.css
+++ b/react-app/src/components/Search/Search.css
@@ -5,7 +5,7 @@
 }
 
 #search-list{
-    width:482px;
+    width:480px;
     height:240px;
     overflow-y: scroll;
     position:absolute;
@@ -17,4 +17,31 @@
 #search-container{
     display:flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.search-item{
+    font-size:13px;
+    cursor: pointer;
+}
+
+.search-item-navlink{
+    text-decoration:none;
+    color:var(--color);
+}
+
+.search-item:hover{
+    background-color: var(--button-hover-background-color);
+    color:var(--color);
+    text-decoration:none;
+}
+
+.stock-search-symbol{
+    margin-right:30px;
+}
+
+.colored{
+    color:rgb(0, 200, 5);
+    margin:0;
+    padding:0;
 }
